--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^0.4.8",
         "box/spout": "^3.1",
         "cviebrock/eloquent-sluggable": "^8.0",
