--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
-        "cross-env": "^7.0",
+        "cross-env": "^7.0.3",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
@@ -24,10 +24,12 @@
     },
     "dependencies": {
         "chart.js": "^2.9.4",
+        "html5-qrcode": "^2.3.8",
         "luxon": "^1.25.0",
         "moment": "^2.29.1",
         "noty": "^3.2.0-beta",
         "numeral": "^2.0.6",
+        "quagga": "^0.12.1",
         "vue": "^2.6.12",
         "vue-chartjs": "^3.5.1",
         "vue-datetime": "^1.0.0-beta.14",
