--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@zxing/library": "^0.20.0",
         "chart.js": "^2.9.4",
         "html5-qrcode": "^2.3.8",
         "luxon": "^1.25.0",
@@ -38,6 +39,7 @@
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.4.9",
         "vue-svg-loader": "^0.16.0",
+        "vue-zxing-scanner": "^0.1.3-beta",
         "vuex": "^3.6.0",
         "weekstart": "^1.0.1"
     },
