--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,11 @@
 {
-    "/js/admin.js": "/js/admin.js?id=d42f64caeb5248b5ea0c",
-    "/js/admin.js.map": "/js/admin.js.map?id=4e9dbd8eadef980cc7fc",
-    "/js/iframe.js": "/js/iframe.js?id=ad79fb57755b3285fdeb",
-    "/js/iframe.js.map": "/js/iframe.js.map?id=c2d0c47a71773a7f55ce",
-    "/js/site.js": "/js/site.js?id=0bb4f86e19b1b31960f4",
-    "/js/site.js.map": "/js/site.js.map?id=e1dff5e29bfbfdbd6827",
-    "/js/widget.js": "/js/widget.js?id=8897c2fa9e2e449fc16e",
-    "/css/app.css": "/css/app.css?id=8014fe9fb6b9195bf07f",
-    "/css/admin.css": "/css/admin.css?id=e34033a1e98006695842",
-    "/css/iframe.css": "/css/iframe.css?id=862d178b3f363d6f6842",
-    "/js/widget.js.map": "/js/widget.js.map?id=badb83dfac2a055fb27b",
-    "/css/app.css.map": "/css/app.css.map?id=b697735b1e274931bb60",
-    "/css/admin.css.map": "/css/admin.css.map?id=640fdcda79cd9befc1ac",
-    "/css/iframe.css.map": "/css/iframe.css.map?id=d2995eb68314e96796c0"
+    "/js/admin.js": "/js/admin.js?id=efd69419783fe575cadc",
+    "/js/iframe.js": "/js/iframe.js?id=e175aa932336955472ab",
+    "/js/new_widget.js": "/js/new_widget.js?id=67283dbe0b1128287ffc",
+    "/js/site.js": "/js/site.js?id=b8d1ffa928a56d817430",
+    "/js/widget.js": "/js/widget.js?id=60fcd81da89d46c72147",
+    "/css/app.css": "/css/app.css?id=35445bbd3653c620cd9f",
+    "/css/admin.css": "/css/admin.css?id=181f3f23f92911ad08ef",
+    "/css/iframe.css": "/css/iframe.css?id=bdc5ed5cbe31eff7378d",
+    "/js/widget_without_pay.js": "/js/widget_without_pay.js?id=4acdb0c0438bc8f3b4c6"
 }
